--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ venv.bak/
 
 # Data files which should not be commited
 /data/all_values
+
+# Notebooks for testing which we don't want to commit
+test*.ipynb
