--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ pycountry-convert==0.7.2
 requests==2.21.0
 scikit-image==0.15.0
 scipy==1.2.1
+seaborn==0.9.0
 torch==1.1.0
 torchvision==0.2.2.post3
