--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas-datareader==0.7.0
 pycountry-convert==0.7.2
 requests==2.21.0
 scikit-image==0.15.0
+scikit-learn==0.21.2
 scipy==1.3.0
 seaborn==0.9.0
 torch==1.1.0
